Fix some deprecations